# llm-memory-manager

./: .gitignore  README.md  README_zh.md  clear_neo4j.py  main.py  pyproject.toml  requirements.txt
data/: masters.txt  sample.txt  test.txt
milvus_data/: milvus.db
src/: config.py  context_manager.py  conversation_processor.py  data_processor.py  graph_builder.py  graph_db_manager.py  graph_manager.py  llm_tools.py  logger.py  retriever.py  vector_store.py
tests/: test_conversation_processor.py
