[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-memory-manager"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" },
]
description = "A package to manage conversation context for LLM applications."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
# 在这里写下你的项目依赖，例如:
dependencies = [
    "openai",
    "numpy",
    "scikit-learn",
    "neo4j",
    "pymilvus",
    "uvicorn",
    "fastapi",
    "pydantic",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where = ["src"]